<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="title_description">Add your first\ncocktail here</string>
    <string name="add_cocktail">Add cocktail</string>
    <string name="title">Title</string>
    <string name="add_title">Add title</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="description">Description</string>
    <string name="optional_field">Optional field</string>
    <string name="recipe">Recipe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_ingredient_list_error_description">There must be at least one ingredient</string>
    <string name="add">Add</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient_name">Ingredient’s name</string>
</resources>