<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/add_photo_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/add_photo_icon_bg"
            android:paddingStart="96dp"
            android:paddingTop="90dp"
            android:paddingEnd="96dp"
            android:paddingBottom="90dp"
            android:src="@drawable/add_photo_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_til"
            style="@style/Theme.CocktailBar.TextInputLayout.TitleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_photo_iv"
            app:placeholderText="@string/cocktail_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_til"
            style="@style/Theme.CocktailBar.TextInputLayout.OptionalField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edt"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredient_list_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/description_til"
            tools:listitem="@layout/ingredient_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_til"
            style="@style/Theme.CocktailBar.TextInputLayout.OptionalField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/recipe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_list_rv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipe_edt"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4B97FF"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe_til" />

        <Button
            android:id="@+id/cancel_btn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:text="@string/cancel"
            android:textColor="#4B97FF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_btn"
            app:strokeColor="#4B97FF" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>